--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -161,7 +161,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .box .box-items li a img {width: 68px;height: 68px;display: block;}
 
 .home-mobile .box-p {margin-bottom: 16px;width: 25%;padding: 0 3px;}
-.home-mobile .box-p .box-p-wrap {box-shadow: 0px 2.69261px 2.69261px rgba(0, 0, 0, 0.25);border-radius: 8px 8px 0 0;overflow: hidden;}
+.home-mobile .box-p .box-p-wrap {border-radius: 8px 8px 0 0;overflow: hidden;}
 .home-mobile .box-p .box-p-img {position: relative;}
 .home-mobile .box-p .box-p-img img {width: 100%;height: 188px;object-fit: cover;border-radius: 8px;}
 .home-mobile .box-p .box-p-img .rating-label {background: linear-gradient(102.14deg, #6633B9 0%, #A176E8 91.73%);color: #FFFFFF;font-size: 14px;padding: 4px 10px;border-radius: 9px 0;position: absolute;top: 0;right: 12px;}
