--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -367,7 +367,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 
 .home-mobile .header-content {padding: 12px;}
 .home-mobile .header-content .hotsale-today {background: #FFFFFF;border-radius: 8px;padding: 14px 10px;margin-bottom: 12px;}
-.home-mobile .header-content .hotsale-today .title h3 {color: #6633B9;text-transform: capitalize;font-weight: 900;font-style: italic;line-height: 32px;padding-right: 10px;
+.home-mobile .header-content .hotsale-today .title h3 {color: #6633B9;text-transform: capitalize;font-weight: 900;font-style: italic;line-height: 10px;padding-right: 10px;
 	background: linear-gradient(87.62deg, #6633B9 16.73%, #926AD3 83.07%);
 	background-clip: text;
 	-webkit-background-clip: text;
@@ -404,7 +404,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .home-mobile .header-content .hotsale-today .progress-icon,
 .home-mobile .flash-sale .list-all .item .p-sold .progress-icon {position: absolute;top: -6px;left: 0;width: 16px;z-index: 9;}
 
-.home-mobile .header-content .featured {padding: 14px 10px;border-radius: 8px;background: #FFFFFF;display: flex;flex-direction: column;align-items: center;justify-content: center;}
+.home-mobile .header-content .featured {padding: 14px 10px 20px;border-radius: 8px;background: #FFFFFF;display: flex;flex-direction: column;align-items: center;justify-content: center;}
 .home-mobile .header-content .featured ul {display: flex;/*flex-wrap: wrap;*/align-items: center;justify-content: space-around;}
 .home-mobile .header-content .featured ul li {margin: 0;padding: 0;background: transparent;text-align: center;width: 12.5%;}
 .home-mobile .header-content .featured ul li span {display: block;font-weight: normal;color: #3F241D;font-size: 13px;line-height: 24px;}
@@ -1298,7 +1298,13 @@ table {border-collapse: collapse;border-spacing: 0;}
 	select, textarea, input {font-size: 16px;}
 }
 
-/***** DO NOT ADD THIS STYLE - JUST FOR TEST ****/
-/*.home-mobile .content-wrapper {max-width: 768px;margin: 0 auto;}
-.home-mobile .container {max-width: 768px;}*/
-/***** ========================== *****/
+.fireAnimation {
+	animation: 0.8s linear 0s infinite normal none running hOKweE;
+}
+@keyframes hOKweE {
+    50% {
+		opacity: 0.3;
+		transform: scale(1.2);
+		/* transform-origin: center center; */
+	}
+}
