--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -393,11 +393,11 @@ table {border-collapse: collapse;border-spacing: 0;}
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
 }
-.home-mobile .header-content .hotsale-today .list-item .item .btn-view {color: #FFFFFF;background-color: #6633B9;font-size: 12px;padding: 1px 8px;}
+.home-mobile .header-content .hotsale-today .list-item .item .btn-view {color: #FFFFFF;background-color: #6633B9;font-size: 12px;padding: 1px 8px;height: 24px;line-height: 22px;}
 .home-mobile .header-content .hotsale-today .p-sold,
 .home-mobile .flash-sale .list-all .item .p-sold {position: relative;}
 .home-mobile .header-content .hotsale-today .progress,
-.home-mobile .flash-sale .list-all .item .p-sold .progress {height: 18px;background: #CCCCD0;border-radius: 100px;position: relative;margin-bottom: 0;}
+.home-mobile .flash-sale .list-all .item .p-sold .progress {height: 25px;background: #CCCCD0;border-radius: 100px;position: relative;margin-bottom: 0;}
 .home-mobile .header-content .hotsale-today .progress .progress-bar,
 .home-mobile .flash-sale .list-all .item .p-sold .progress .progress-bar {background: #8155C9;border-radius: 100px;}
 .home-mobile .header-content .hotsale-today .progress .sr-only,
